--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,10 @@
+#
+# Copyright The Titan Project Contributors.
+#
+
+#
+# On creating a new tag, we publish our maven artifacts to the titan maven bucket.
+#
 name: Release
 
 on: create
@@ -5,6 +12,7 @@ on: create
 jobs:
   publish:
     name: Test and publish
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
