--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,3 +21,9 @@ jobs:
           java-version: '8.0.212'
       - name: Build and test
         run: ./gradlew build -Pversion=${GITHUB_REF#refs/tags/}
+      - name: Publish jar
+        run: >
+          ./gradlew publish -PmavenBucket=${{ secrets.MAVEN_BUCKET }} -Pversion=${GITHUB_REF#refs/tags/}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
